docs(jvm): 更新Java虚拟机文档添加现代JVM新特性和优化